# piLM

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: cpu_inference_essence.md  ecpu_build.md  runtime_status.md
scripts/: build_ecpu_linux.sh  build_ecpu_windows.ps1  export_pilm_quant_bundle.py  export_pilm_quant_bundle_v2.py
src/: __init__.py  __main__.py  _abi.py  cli.py  engine.py  server.py
src/abi/: bindings.py
src/ecpu/: CMakeLists.txt
src/ecpu/include/: ecpu.h  ecpu_base.h  eram.h
src/ecpu/include/device/: api.h
src/ecpu/include/kernel/: api.h
src/ecpu/src/core/: ecpu.c
src/ecpu/src/device/: cuda_device.c  ecpu_device.c  edevice_registry.c
src/ecpu/src/dispatch/: isa_detect.c
src/ecpu/src/eram/: eram.c
src/ecpu/src/kernel/: kernels.c
src/ecpu/test/: base_test.c
src/models/: __init__.py
src/models/base/: __init__.py  layers.py  linear.py
src/models/qwen3/: __init__.py  attention.py  model.py  mtp.py  weights.py
src/runtime/: ckernel.py  memory.py  quantize.py
src/runtime/device/: base.py  cuda_device.py  ecpu_device.py  registry.py
src/runtime/kvcache/: __init__.py  physical_kv.py
src/runtime/loader/: __init__.py  config_parser.py  loader.py  safetensors_loader.py
src/runtime/scheduler/: __init__.py  async_scheduler.py  block.py  block_pool.py  kv_cache_manager.py  request.py  scheduler.py
